# MMA-2E

./: .gitignore  MMA_SHA_2E.ipynb  README.md  pyproject.toml
MMA_2E/: mma_2e.py  qmatrix.py
MMA_2E/utils/: Config.py  Coord_Trans.py  GetResiduals.py  ReadCDF.py  SHA_utils.py  configuration.py  test.json
src/swarmpal_mma/: mma_2e.py  pal_processes.py  qmatrix.py
src/swarmpal_mma/Plotting/: map_plot.py
src/swarmpal_mma/utils/: Config.py  Coord_Trans.py  GetResiduals.py  WriteCDF.py  configuration.py  test.json
src/swarmpal_mma/utils/kernels/: Q_06hours_kernels_1D_Grayver2017.h5  Q_08hours_kernels_1D_Grayver2017.h5  Q_12hours_kernels_1D_Grayver2017.h5  Q_24hours_kernels_1D_Grayver2017.h5
test/: example1.py
